src/app/post/post.component.css
#post-container {
  background-color: white;
  border-bottom: 1px solid lightgray;
  max-width: 700px;
  min-height: 80px;
}
#post-date {
  font-size: 0.8em;
  margin-top: 2.5px;
}
#dropdownBasic1 {
  background-color: rgba(255, 255, 255, 0);
}
#post-body {
  word-wrap: break-word;
}
#user-text:hover {
  cursor: pointer;
}
#single-post-container {
  background-color: white;
  border-bottom: 1px solid lightgray;
  max-width: 700px;
  margin: 0 auto;
}

